--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,14 +1,30 @@
-  /* .bg {
-    background-image: url("https://i.redd.it/qwd83nc4xxf41.jpg");
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 400px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+html, body {
     height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  } */
+    margin: 0;
+}
 
 .my-name {
     background-color: #007bff;
     width: 130px;
+}
+
+/* main,
+footer,
+nav {
+    display: block;
+} */
+
+.card {
+    width: auto;
 }
 
 nav {
@@ -17,37 +33,34 @@ nav {
 }
 
 .nav-items {
-    position: absolute;
+    position: relative;
     top: 50%;
     right: 20px;
     transform: translate(0%, -50%);
 }
 
-.nav-items li {
+.nav-items a {
     display: inline;
 }
 
-.nav-items li:not(:last-child) {
+.nav-items a:not(:last-child) {
     margin-right: 20px;
 }
 
-main {
-    height: 80vh;
+
+.img-responsive {
+    float: left;
 }
 
-
-.left {
-    width: 50%;
-    height: 80vh;
-}
-
-.center {
-    position: absolute;
-}
 
 footer {
-    padding: 30px;
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    margin-top: auto;
+    width: 100%;
+    height: 60px;
+    line-height: 60px; 
     background-color: #7f8c8d;
-    position: relative;
     text-align: center;
   }
